# kalite-app

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac
data/: Makefile.am  org.learningequality.KALite.appdata.xml  org.learningequality.KALite.appdata.xml.in  org.learningequality.KALite.desktop  org.learningequality.KALite.desktop.in
debian/: changelog  control  rules
po/: POTFILES.in  es.po  pt.po
src/: Makefile.am  kalite-app.py  kalite-start.sh
